fix/notification-overlap

--- a/static/css/bot.scss
+++ b/static/css/bot.scss
@@ -58,16 +58,39 @@ body {
     }
 
 }
-
+.acc-info__balance {
+    color: var(--text-profit-success);
+    font-size: 1.6rem;
+    font-weight: 700;
+    line-height: 1.75;
+    line-height: 2.4rem;
+    margin-right: 0.8rem;
+    pointer-events: none;
+    text-align: center;
+    text-transform: default;
+}
+.acc-info__balance.acc-info__balance--no-currency-text{
+    font-size: 0.875rem;
+    font-weight: 700;
+    line-height: 0;
+    // line-height: 2.4rem;
+    /* margin-right: 0.8rem; */
+    pointer-events: none;
+    text-align: center;
+    color:#333;
+    margin: 0px auto;
+}
     .notifyjs-bootstrap-base,
     .notifyjs-bootstrap-success,
     .notifyjs-bootstrap-warn,
     .notifyjs-bootstrap-error {
-        @include mobile {
-        max-width: 80vw !important;
+        white-space: unset !important;
+        max-width: 40vw;
         min-height: 30px;
-        padding: 2px;
+        padding: 8px 30px !important;
         word-break: break-word !important;
+        @include mobile {
+            max-width: 80vw !important;
         }
     }
     .notifyjs-corner{
@@ -81,7 +104,7 @@ body {
         @include mobile {
         min-height: 30px;
         max-width: 40vw;
-        padding: 2px;
+        // padding: 2px;
         word-break: break-word;
         }
 
